--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,4 +2,17 @@
   <header id="header">
     <a href="{{ site.github.url }}/" class="image avatar"><img src="{{ site.github.url }}/images/coffee.jpg" alt="" /></a>
     <h1>{{ site.description | markdownify | remove: '<p>' | remove: '</p>' }}</h1>
+    <ul>
+
+   {% assign pages_list = site.pages %}
+   {% for node in pages_list %}
+     {% if node.title != null %}
+       {% if node.layout == "category" %}
+         <li><a class="category-link {% if page.url == node.url %} active{% endif %}"
+         href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a></li>
+       {% endif %}
+     {% endif %}
+   {% endfor %}
+
+</ul>
   </header>
