--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,21 +1,18 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    {% include head.html %}
-    {% include opengraph.html %}
-    {% include twittercard.html %}
-  </head>
-	<body id="top">
+---
+layout: default
+---
+<ul class="posts-list">
 
-		{% include header.html %}
+  {% assign category = page.category | default: page.title %}
+  {% for post in site.categories[category] %}
+    <li>
+      <h3>
+        <a href="{{ site.baseurl }}{{ post.url }}">
+          {{ post.title }}
+        </a>
+        <small>{{ post.date | date_to_string }}</small>
+      </h3>
+    </li>
+  {% endfor %}
 
-		<!-- Main -->
-			<div id="main">
-				{{ content }}
-			</div>
-
-      {% include footer.html %}
-      {% include scripts.html %}
-
-	</body>
-</html>
+</ul>
