--- a/_layouts/category0.html
+++ b/_layouts/category0.html
@@ -1,18 +1,13 @@
 ---
 layout: default
 ---
-<ul class="posts-list">
 
-  {% assign category = page.category | default: page.title %}
-  {% for post in site.categories[category] %}
-    <li>
-      <h3>
-        <a href="{{ site.baseurl }}{{ post.url }}">
-          {{ post.title }}
-        </a>
-        <small>{{ post.date | date_to_string }}</small>
-      </h3>
-    </li>
-  {% endfor %}
+  {% include header.html %}
 
-</ul>
+  <!-- Main -->
+    <div id="main">
+      {{ content }}
+    </div>
+
+    {% include footer.html %}
+    {% include scripts.html %}
