--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,8 +13,8 @@
         <li class="{% if page.url == '/portfolio/' %} active {% endif %}">
           <a href="{{ base_path }}/portfolio/">portfolio</a>
         </li>
-        <li class="{% if page.url == '/os/' %} active {% endif %}">
-          <a href="{{ base_path }}/os/">OS</a>
+        <li class="{% if page.url == '/gitblog/' %} active {% endif %}">
+          <a href="{{ base_path }}/gitblog/">gitblog</a>
         </li>
     </ol>
 
