--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 
     <ol class="v">
         <li class="{% if page.url == '/algorithm/' %} active {% endif %}">
-          <a href="{{ base_path }}/algorithm/">algorithm</a></li>
+          <a href="{{ base_path }}/algorithm/"><i class="fas fa-blog"></i>algorithm</a></li>
         <li class="{% if page.url == '/portfolio/' %} active {% endif %}">
           <a href="{{ base_path }}/portfolio/">portfolio</a>
         </li>
