--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,13 @@
 <!-- Header -->
 <style>
-  ol.v {list-style-type: none;}
+  ol.v {
+    list-style-type: none;
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+     width: 33.33333333%;
+  }
 </style>
   <header id="header">
     <a href="{{ site.github.url }}/" class="image avatar"><img src="{{ site.github.url }}/images/coffee.jpg" alt="" /></a>
