--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,8 @@
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
-     width: 33.33333333%;
+    width: 33.33333333%;
+    border-style: solid;
   }
 </style>
   <header id="header">
