--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,37 +1,56 @@
 <!-- Header -->
 <style>
-  ol.v {
-    list-style-type: none;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
+  a{
+  	text-decoration : none;
   }
-  .list1{
-    position: relative;
-    width: 66.66666666%;
-  }
-  .list2{
-    position: relative;
-    width: 33.3333333%;
-    border-style: solid;
-  }
+    .div1{
+      position: relative;
+      width: 66%;
+      display: inline-block;
+    }
+    .div2{
+      display: inline-block;
+      border : solid;
+    }
+    ol.v {
+      list-style-type: none;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+      font: 20px arial, sans-serif;
+      margin: 0px;
+    }
+    li{
+      padding : 5px;
+    }
+    .category{
+    border-bottom : 1px solid;
+    padding : 10px;
+    font: 20px arial, sans-serif;
+    text-align: center;
+    }
+
 </style>
   <header id="header">
     <a href="{{ site.github.url }}/" class="image avatar"><img src="{{ site.github.url }}/images/coffee.jpg" alt="" /></a>
     <h1>{{ site.description | markdownify | remove: '<p>' | remove: '</p>' }}</h1>
-<div>
-<div class="list1"></div>
-<div class="list2">
-    <ol class="v">
-        <li class="{% if page.url == '/algorithm/' %} active {% endif %}">
-          <a href="{{ base_path }}/algorithm/">algorithm</a></li>
-        <li class="{% if page.url == '/portfolio/' %} active {% endif %}">
-          <a href="{{ base_path }}/portfolio/">portfolio</a>
-        </li>
-        <li class="{% if page.url == '/gitblog/' %} active {% endif %}">
-          <a href="{{ base_path }}/gitblog/">gitblog</a>
-        </li>
-    </ol>
-</div>
-</div>
+    <div>
+    <div class="div1"></div>
+    <div class="div2">
+    <div class="category"><b>CATEGORY</b></div>
+        <div class="list">
+        <ol class="v">
+            <li class="{% if page.url == '/algorithm/' %} active {% endif %}">
+              <a href="{{ base_path }}/algorithm/">algorithm</a></li>
+            <li class="{% if page.url == '/portfolio/' %} active {% endif %}">
+              <a href="{{ base_path }}/portfolio/">portfolio</a>
+            </li>
+            <li class="{% if page.url == '/gitblog/' %} active {% endif %}">
+              <a href="{{ base_path }}/gitblog/">gitblog</a>
+            </li>
+        </ol>
+        </div>
+    </div>
+    </div>
+
   </header>
