--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,14 +10,14 @@
     }
     .div2{
       display: inline-block;
-      border : solid;
+      border : 1px solid;
     }
     ol.v {
       list-style-type: none;
       min-height: 1px;
       padding-right: 10px;
       padding-left: 10px;
-      font: 10px arial, sans-serif;
+      font: 13px arial, sans-serif;
       margin: 0px;
     }
     li{
