--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,5 @@
 <!-- Header -->
 <style>
-
     ol.v {
       list-style-type: none;
       min-height: 1px;
@@ -8,7 +7,9 @@
       padding-left: 10px;
       font: 15px arial, sans-serif;
     }
-
+    li{
+        padding : 5px;
+      }
 </style>
   <header id="header">
     <a href="{{ site.github.url }}/" class="image avatar"><img src="{{ site.github.url }}/images/coffee.jpg" alt="" /></a>
