--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     }
     li{
         padding : 5px;
-      }
+    }
 </style>
   <header id="header">
     <a href="{{ site.github.url }}/" class="image avatar"><img src="{{ site.github.url }}/images/coffee.jpg" alt="" /></a>
@@ -17,7 +17,7 @@
 
         <ol class="v">
             <li class="{% if page.url == '/algorithm/' %} active {% endif %}">
-              <a href="{{ base_path }}/algorithm/">algorithm</a></li>
+              <a href="{{ base_path }}/algorithm/">algorithm1</a></li>
             <li class="{% if page.url == '/portfolio/' %} active {% endif %}">
               <a href="{{ base_path }}/portfolio/">portfolio</a>
             </li>
