--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,8 @@
 
         <ol class="v">
             <li class="{% if page.url == '/algorithm/' %} active {% endif %}">
-              <a href="{{ base_path }}/algorithm/">algorithm1</a></li>
+              <%if page.url == '/algorithm/' {%><a>알고</a><%}%>
+              <a href="{{ base_path }}/algorithm/">algorithm</a></li>
             <li class="{% if page.url == '/portfolio/' %} active {% endif %}">
               <a href="{{ base_path }}/portfolio/">portfolio</a>
             </li>
