--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,9 @@
     li{
         padding : 5px;
     }
+    .selected{
+      border : 5px solid red;
+    }
 </style>
   <header id="header">
     <a href="{{ site.github.url }}/" class="image avatar"><img src="{{ site.github.url }}/images/coffee.jpg" alt="" /></a>
@@ -17,7 +20,7 @@
 
         <ol class="v">
             <li class="{% if page.url == '/algorithm/' %} active {% endif %}">
-              {% if page.url == '/algorithm/' %}<a>알고</a> {% endif %}
+              {% if page.url == '/algorithm/' %}<div class="selected"></div>{% endif %}
               <a href="{{ base_path }}/algorithm/">algorithm</a></li>
             <li class="{% if page.url == '/portfolio/' %} active {% endif %}">
               <a href="{{ base_path }}/portfolio/">portfolio</a>
