--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
 
         <ol class="v">
             <li class="{% if page.url.contains '/algorithm/' %} active {% endif %}"
-            {% if page.url.contains '/algorithm/*' %} style="border-left:3px solid red;"
+            {% if page.url.contains '/algorithm/' %} style="border-left:3px solid red;"
             {% endif %}>
               <a href="{{ base_path }}/algorithm/">algorithm</a></li>
             <li class="{% if page.url == '/portfolio/' %} active {% endif %}"
