--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
         <ol class="v">
             <li class="{% if page.url.contains('/algorithm/') %} active {% endif %}"
             style="{% if page.url.contains('/algorithm/') %} border-left:3px solid red;
-            {% endif %}>"
+            {% endif %}">
               <a href="{{ base_path }}/algorithm/">algorithm</a></li>
             <li class="{% if page.url == '/portfolio/' %} active {% endif %}"
             {% if page.url == '/portfolio/' %} style="border-left:3px solid red;"
