--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <!-- Header -->
 <style>
-    ol.v {
+  /*
+    #header ol.v {
       list-style-type: none;
       min-height: 1px;
       padding-right: 10px;
@@ -8,10 +9,11 @@
       font: 15px arial, sans-serif;
       text-align : left;
     }
-    li{
+    #header li{
         padding : 5px;
         padding-left: 10px;
     }
+    */
 </style>
   <header id="header">
     <a href="{{ site.github.url }}/" class="image avatar"><img src="{{ site.github.url }}/images/coffee.jpg" alt="" /></a>
