--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1301,10 +1301,9 @@
 			#header ul{
 	      list-style-type: none;
 	      min-height: 1px;
-	      padding-right: 10px;
-	      padding-left: 66%;
+	      
 	      font: 15px arial, sans-serif;
-	      text-align : left;
+	      text-align : center;
 	    }
 	    #header li{
 					display: inline;
