--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1298,12 +1298,13 @@
 			}
 
 			/*category???*/
+			#header .category{
+				text-align : center;
+			}
 			#header ul{
 	      list-style-type: none;
 	      min-height: 1px;
-
 	      font: 15px arial, sans-serif;
-	      text-align : center;
 	    }
 	    #header li{
 					display: inline;
@@ -1522,7 +1523,6 @@
 			#header ul{
 	      list-style-type: none;
 	      min-height: 1px;
-
 	      font: 15px arial, sans-serif;
 	      text-align : center;
 	    }
@@ -1531,7 +1531,7 @@
 	        padding : 5px;
 	        padding-left: 10px;
 	    }
-			
+
 		/* Footer */
 
 			#footer {
