--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1300,6 +1300,7 @@
 			/*category???*/
 			#header .category{
 				text-align : center;
+				border : 3px solid black;
 			}
 			#header ul{
 	      list-style-type: none;
