--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1306,6 +1306,9 @@
 	      list-style-type: none;
 	      min-height: 1px;
 	      font: 15px arial, sans-serif;
+				width: 30%;
+ 				margin-left: auto;
+ 				margin-right: auto;
 	    }
 	    #header li{
 					display: inline;
