--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1298,7 +1298,7 @@
 			}
 
 			/*category???*/
-			#header .category{
+			#header .categ{
 				text-align : center;
 				border : 3px solid black;
 			}
