--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1298,9 +1298,9 @@
 			}
 
 			/*category???*/
-			#header .categ{
+			#header div{
 				text-align : center;
-				border : 3px solid black;
+				border : 3px solid red;
 			}
 			#header ul{
 	      list-style-type: none;
