--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1300,9 +1300,10 @@
 			/*category???*/
 			#header div{
 				text-align : center;
-				border : 3px solid red;
+				border : 1px solid red;
 			}
 			#header ul{
+				border : 3px solid blue;
 	      list-style-type: none;
 	      min-height: 1px;
 	      font: 15px arial, sans-serif;
