--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1307,9 +1307,10 @@
 	      list-style-type: none;
 	      min-height: 1px;
 	      font: 15px arial, sans-serif;
+				padding-top: 30%;
+				padding-left: 30%;
 				width: 30%;
- 				margin-left: auto;
- 				margin-right: auto;
+
 	    }
 	    #header li{
 					display: inline;
