--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1303,13 +1303,12 @@
 				border : 1px solid red;
 			}
 			#header ul{
-				border : 3px solid blue;
+				border : 3px solid red;
 	      list-style-type: none;
 	      min-height: 1px;
 	      font: 15px arial, sans-serif;
-				padding-top: 30%;
-				padding-left: 30%;
-				width: 30%;
+				padding-left: 10%;
+				margin: 0;
 
 	    }
 	    #header li{
