--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1299,7 +1299,7 @@
 
 			/*category???*/
 			#header {
-				display: inline-block;
+				display: block;
 			}
 			#header div{
 				text-align : center;
