--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1303,7 +1303,7 @@
 			}
 			#header div{
 				text-align : center;
-				border : 1px solid black;
+				border : 1px solid red;
 			}
 			#header ul{
 				border : 3px solid blue;
