--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,10 @@
 </style>
   <header id="header">
     <div id="header_container" style="border: 1px solid yellow;">
+      <div class="intro" style="border: 1px solid green;">
         <a href="{{ site.github.url }}/" class="image avatar"><img src="{{ site.github.url }}/images/coffee.jpg" alt="" /></a>
         <h1>{{ site.description | markdownify | remove: '<p>' | remove: '</p>' }}</h1>
+      </div>
       <div class="categ">
         <ul>
             <li class="{% if page.url == '/algorithm/' %} active {% endif %}"
@@ -37,5 +39,5 @@
             </li>
         </ul>
       </div>
-      </div>
+    </div>
   </header>
