--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,8 +16,8 @@
     */
 </style>
   <header id="header">
-    <div id="header_container" style="border: 1px solid yellow;">
-      <div class="intro" style="border: 1px solid green;">
+    <div id="header_container">
+      <div class="intro" style="border: 1px solid yellow;">
         <a href="{{ site.github.url }}/" class="image avatar"><img src="{{ site.github.url }}/images/coffee.jpg" alt="" /></a>
         <h1>{{ site.description | markdownify | remove: '<p>' | remove: '</p>' }}</h1>
       </div>
