--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1298,12 +1298,12 @@
 			}
 
 			/*category???*/
-			#header div{
+			#header .categ{
 				text-align : center;
-				border : 1px solid red;
+				border : 2px solid red;
 			}
 			#header ul{
-				border : 3px solid blue;
+				border : 1px solid blue;
 	      list-style: none;
 	      min-height: 1px;
 	      font: 15px arial, sans-serif;
