--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1311,10 +1311,9 @@
 
 	    }
 	    #header li{
-					border : 4px solid black;
+					border : 4px solid yellow;
 					display: inline;
-	        padding : 5px;
-	        padding-left: 30px;
+	        padding-right: : 30px;
 	    }
 
 		/* Footer */
