--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1298,10 +1298,12 @@
 			}
 
 			/*category???*/
+			/*
 			#header .categ{
 				margin: 0;
 				text-align : center;
 			}
+			*/
 			#header ul{
 				list-style: none;
 				min-height: 1px;
@@ -1417,10 +1419,12 @@
 			}
 
 			/*category???*/
+			/*
 			#header .categ{
 				margin: 0;
 				text-align : center;
 			}
+			*/
 			#header ul{
 				list-style: none;
 				min-height: 1px;
@@ -1523,10 +1527,12 @@
 			}
 
 			/*category???*/
+			/*
 			#header .categ{
 				margin: 0;
 				text-align : center;
 			}
+			*/
 			#header ul{
 				list-style: none;
 				min-height: 1px;
