--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1433,7 +1433,7 @@
 			}
 	    #header li{
 				display: inline;
-				padding-right: : 30px;
+				padding-right:30px;
 			}
 
 		/* Footer */
@@ -1541,7 +1541,7 @@
 			}
 			#header li{
 				display: inline;
-				padding-right: : 30px;
+				padding-right: 30px;
 			}
 
 		/* Footer */
