--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <!-- Header -->
   <header id="header">
-     <div style="display: block; border : 1px solid red;">
+     <div style="display: block; border : 1px solid yellow;">
        <div style="display: block; border : 1px solid red;>
         <a href="{{ site.github.url }}/" class="image avatar"><img src="{{ site.github.url }}/images/coffee.jpg" alt="" /></a>
         <h1>{{ site.description | markdownify | remove: '<p>' | remove: '</p>' }}</h1>
       </div>
-      <div style="display: block; border : 1px solid red;>
+      <div style="display: block; border : 1px solid blue;>
         <ul>
             <li class="{% if page.url == '/algorithm/' %} active {% endif %}"
             {% if page.url == '/algorithm/' %} style="border-left:3px solid red;"
