--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
   <header id="header">
-     <div>
-       <div>
+     <div >
+       <div  style="display: block; border : 1px solid red;">
         <a href="{{ site.github.url }}/" class="image avatar"><img src="{{ site.github.url }}/images/coffee.jpg" alt="" /></a>
         <h1>{{ site.description | markdownify | remove: '<p>' | remove: '</p>' }}</h1>
       </div>
