--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1207,7 +1207,7 @@
 					}
 				}
 			}
-			/*category???*/
+			/*category*/
 			#header ul{
 				list-style: none;
 				min-height: 1px;
@@ -1217,8 +1217,8 @@
 				text-align : left;
 			}
 			#header li{
-					padding : 5px;
-					padding-left: 10px;
+				padding : 5px;
+				padding-left: 10px;
 			}
 
 		/* Footer */
@@ -1297,20 +1297,25 @@
 				}
 			}
 
-			/*category???*/
+			/*category*/
 			/*
 			#header .categ{
 				margin: 0;
 				text-align : center;
 			}
 			*/
+			//????????
+			#header div{
+				text-align: center;
+				
+			}
 			#header ul{
 				list-style: none;
 				min-height: 1px;
 				font: 15px arial, sans-serif;
 				margin: 0;
 			}
-	    #header li{
+	    		#header li{
 				display: inline;
 			}
 
