--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1307,7 +1307,7 @@
 			//????????
 			#header div{
 				text-align: center;
-				
+				border : 1px solid green;
 			}
 			#header ul{
 				list-style: none;
