--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1429,6 +1429,9 @@
 				text-align : center;
 			}
 			*/
+			#header div{
+				border : 1px solid green;
+			}
 			#header ul{
 				list-style: none;
 				min-height: 1px;
@@ -1537,6 +1540,9 @@
 				text-align : center;
 			}
 			*/
+			#header div{
+				border : 1px solid green;
+			}
 			#header ul{
 				list-style: none;
 				min-height: 1px;
