--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1208,6 +1208,9 @@
 				}
 			}
 			/*category*/
+			#header div{
+				border : 1px solid red;
+			}
 			#header ul{
 				list-style: none;
 				min-height: 1px;
