--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1217,10 +1217,10 @@
 			#header ul{
 				list-style: none;
 				min-height: 1px;
-				padding-right: 10px;
-				padding-left: 66%;
+				//padding-right: 10px;
+				//padding-left: 66%;
 				font: 15px arial, sans-serif;
-				text-align : left;
+				//text-align : left;
 			}
 			#header li{
 				padding : 5px;
