--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1312,10 +1312,10 @@
 			*/
 			//????????
 			#header_img{
-				border : 1px solid red;
+				border : 1px solid blue;
 			}
 			#header_category{
-				border : 1px solid red;
+				border : 1px solid blue;
 			}
 			#header ul{
 				list-style: none;
