--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1305,8 +1305,7 @@
 				text-align : center;
 			}
 			*/
-			//????????
-			
+		
 			#header ul{
 				list-style: none;
 				min-height: 1px;
@@ -1420,7 +1419,7 @@
 				}
 			}
 
-			/*category???*/
+			/*category*/
 			/*
 			#header .categ{
 				margin: 0;
@@ -1529,7 +1528,7 @@
 				}
 			}
 
-			/*category???*/
+			/*category*/
 			/*
 			#header .categ{
 				margin: 0;
