--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,16 +8,16 @@
       <div id="header_category">
         <ul>
             <li class="{% if page.url == '/algorithm/' %} active {% endif %}"
-            {% if page.url == '/algorithm/' %} style="border-left:3px solid red;"
+            {% if page.url == '/algorithm/' %}
             {% endif %}>
               <a href="{{ base_path }}/algorithm/">algorithm</a></li>
             <li class="{% if page.url == '/portfolio/' %} active {% endif %}"
-            {% if page.url == '/portfolio/' %} style="border-left:3px solid red;"
+            {% if page.url == '/portfolio/' %}
             {% endif %}>
               <a href="{{ base_path }}/portfolio/">portfolio</a>
             </li>
             <li class="{% if page.url == '/gitblog/' %} active {% endif %}"
-            {% if page.url == '/gitblog/' %} style="border-left:3px solid red;"
+            {% if page.url == '/gitblog/' %}
             {% endif %}>
               <a href="{{ base_path }}/gitblog/">gitblog</a>
             </li>
